--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,17 @@
+# SMTP Mail
 MAILTRAP_USER=
 MAILTRAP_PASS=
 MAILTRAP_SMTP=
 MAILTRAP_PORT=
 
+# Infos generales
 USER_NAME=
 USER_EMAIL=
+
+# Dossier ou se situe les images
+FOLDER_PROJECT=
+
+# Base de donnees
+BDD_USER=
+BDD_PASS=
+BDD_DSN= host= ;dbname=
