--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,4 @@ FOLDER_PROJECT=
 # Base de donnees
 BDD_USER=
 BDD_PASS=
-BDD_DSN= host= ;dbname=
+BDD_DSN=mysql:host=localhost;dbname=boite_a_vinyles_db
